# rsvelte

./: .benchmark-files.txt  .dockerignore  .gitignore  .gitmodules  .pinact.yaml  AGENTS.md  BLOCKER_IMPLEMENTATION.md  BUILD_FIX_INSTRUCTIONS.md  CALL_EXPRESSION_TODO_GUIDE.md  CONTRIBUTING.md  CSS_IMPLEMENTATION_FILES.txt  CSS_VISITORS_IMPLEMENTATION.md  CSS_VISITORS_MAPPING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_GUIDE_analyze_component.md  IMPLEMENTATION_SUMMARY.md  IMPORT_DECLARATION_IMPLEMENTATION.md  INVESTIGATION_RUNTIME_RUNES.md  NEXT_STEPS.md  NEXT_TASK.md  NEXT_TASKS.md  NEXT_TASK_2026-01-10.md  NEXT_TASK_CSS_FIXES.md  NEXT_TASK_INSTRUCTIONS.md  NEXT_TASK_PHASE2_VALIDATORS.md  OXC_v0.107_MIGRATION_GUIDE.md  PARSER_REMAINING_FIXES.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_REPORT.md  PERF_ROADMAP.md  PHASE1_REVIEW_REPORT.md  PHASE2_FIXES.md  PHASE2_VISITOR_GAPS.md  PHASE3_ASSIGNMENT_IMPLEMENTATION_GUIDE.md  PHASE3_CLIENT_GUIDE.md  PHASE3_IMPLEMENTATION_STATUS.md  PHASE3_TRANSFORM_COMPLETION_GUIDE.md  PRINT_FINAL_REPORT.md  PRINT_INTEGRATION_COMPLETE.md  (+40 more)
crates/rsvelte_capi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/rsvelte_capi/include/: rsvelte.h
crates/rsvelte_capi/src/: lib.rs
crates/rsvelte_capi/tests/: callbacks.rs  envelope.rs  header_invariants.rs  memory.rs  module.rs  options_coverage.rs
crates/rsvelte_core/: Cargo.toml  build.rs
crates/rsvelte_core/benches/: compiler.rs  parser.rs
crates/rsvelte_core/src/: lib.rs  lint_scope.rs  main.rs  napi.rs  napi_raw.rs  napi_raw_parse.rs  wasm.rs
crates/rsvelte_core/tests/: a11y_validator_fixes.rs  analyze_attribute_expression_no_arena.rs  aria_bare_attribute_warning.rs  arrow_param_spans.rs  ast_primitives_pin.rs  async_body_stmt_edge_cases.rs  attribute_shorthand_validation.rs  audit_skipped.rs  await_block_multibyte.rs  bind_indeterminate_no_type.rs  bindable_whitespace.rs  block_close_mismatch.rs  block_head_parse_errors.rs  class_method_default_param_local_derived.rs  class_method_with_state_not_field.rs  class_rune_lexical_scan.rs  client_transforms_pin.rs  compatibility_report.rs  compile_both_parity.rs  compile_module_thread_safety.rs  compiler_errors.rs  compiler_fixtures.rs  component_bind_getter_setter.rs  const_tag_multibyte.rs  const_tag_pattern_pin.rs  css.rs  css_cluster_pin.rs  css_dynamic_id.rs  css_global_sibling_1702.rs  css_hash_callback_raw_digest.rs  css_is_branch_combinator.rs  css_is_where_branch.rs  css_nested_sibling_1703.rs  css_nesting_class_directive.rs  css_nth_child_args.rs  css_scoping_1237.rs  css_selector_list_split.rs  css_svelte_boundary_scope.rs  css_svelte_head_sibling_1700.rs  css_wrapper_sibling_desync_1708.rs  (+114 more)
crates/rsvelte_esrap/: Cargo.toml
crates/rsvelte_esrap/src/: command.rs  context.rs  lib.rs  printer.rs
crates/rsvelte_esrap/tests/: additional_comments.rs  arrow_return_type.rs  compat.rs  esrap_samples.rs  golden.rs  indent.rs  pluggability.rs  quotes.rs  sourcemap_keywords.rs
crates/rsvelte_fmt/: Cargo.toml  README.md
crates/rsvelte_fmt/src/: config.rs  daemon.rs  main.rs  oxfmt_ignore.rs  style_cache.rs  tailwind.rs  tailwind_sidecar.rs  ts_config.rs
crates/rsvelte_fmt/tests/: cli.rs  fmt_corpus_markdown_baseline.txt  svelte_dev_markdown.rs
crates/rsvelte_fmt_wasm/: Cargo.toml
crates/rsvelte_fmt_wasm/src/: lib.rs
crates/rsvelte_formatter/: Cargo.toml  README.md
crates/rsvelte_formatter/benches/: formatter.rs
crates/rsvelte_formatter/src/: children.rs  collapse.rs  doc.rs  error.rs  expression.rs  indent.rs  json.rs  lib.rs  markup.rs  options.rs  prettier_ignore.rs  reindent.rs  scratch.rs  script.rs  sort_order.rs  style.rs  style_css.rs  tailwind_sort.rs
crates/rsvelte_formatter/tests/: attr_width.rs  blank_lines.rs  block_indent.rs  css_native.rs  expression.rs  fill_content_tag.rs  fmt_corpus_baseline.txt  indent.rs  markup_close_tag.rs  markup_expression_indent.rs  markup_expressions.rs  markup_indent.rs  markup_open_tag.rs  markup_patterns.rs  markup_preserve_ws.rs  markup_wrap.rs  options.rs  script_regex_indent.rs  smoke.rs  style.rs  style_block.rs  svelte_dev_corpus.rs  tailwind_functions.rs  typescript.rs
crates/rsvelte_lint/: Cargo.toml  README.md  build.rs
crates/rsvelte_lint/demo/: Demo.svelte  README.md  rsvelte-lint.json
crates/rsvelte_lint/src/: config.rs  context.rs  diagnostic.rs  engine.rs  eslint_import.rs  inline_config.rs  json_api.rs  lib.rs  line_index.rs  main.rs  napi.rs  output.rs  presets.rs  registry.rs  rule.rs  runner.rs  scope.rs  script.rs  suppression.rs  svelte_scan.rs  type_backend.rs  validator.rs  visitor.rs  wasm.rs
crates/rsvelte_lint/tests/: browser_globals_ts_assertion.rs  comment_directive.rs  eslint_plugin_oracle.rs  experimental_and_dispatcher.rs  valid_compile.rs  valid_style_parse.rs
crates/rsvelte_lint_bindings/: Cargo.toml
crates/rsvelte_lint_bindings/src/: lib.rs  napi.rs  wasm.rs
crates/rsvelte_lint_types/: Cargo.toml
crates/rsvelte_lint_types/src/: lib.rs  resolver.rs
crates/rsvelte_lint_types/tests/: nav_type_aware_e2e.rs  no_unused_props_fixtures.rs  type_aware_e2e.rs
crates/rsvelte_napi/: Cargo.toml
crates/rsvelte_napi/src/: lib.rs
crates/rsvelte_preprocess/: Cargo.toml  README.md
crates/rsvelte_preprocess/js/: less-bridge.mjs  markdown-bridge.mjs  mdsvex-bridge.mjs  modular-css-bridge.mjs  sveltex-bridge.mjs
crates/rsvelte_preprocess/src/: bridge.rs  filter.rs  less.rs  lib.rs  markdown.rs  mdsvex.rs  modular_css.rs  sass.rs  sveltex.rs  switch_case.rs
crates/rsvelte_preprocess/tests/: bridge_ports.rs  less.rs  modular_css_native.rs  sass.rs  svelte_preprocess.rs  switch_case.rs
crates/tailwind_class_order/: Cargo.toml  README.md
crates/tailwind_class_order/data/: color_families.txt  container_sizes.txt  default_order.txt  default_variants.txt  functional_roots.txt  property_anchor.txt  type_anchor.txt  variant_roots_order.txt
crates/tailwind_class_order/examples/: sort_stdin.rs
crates/tailwind_class_order/scripts/: gen_base_order.mjs  gen_color_families.mjs  gen_container_sizes.mjs  gen_functional_roots.mjs  gen_property_anchor.mjs  (+4 more)
(+1905 files in other folders)
