[workspace]
resolver = "3"
members = [
    "crates/rsvelte_capi",
    "crates/rsvelte_core",
    "crates/rsvelte_fmt",
    "crates/rsvelte_formatter",
]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = false
debug = false
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
panic = "unwind"  # Criterion requires unwind for catching panics

# SPIKE: redirect every published oxc_* crate to the same git rev so
# rsvelte's AST types unify with oxc_formatter's transitive deps
# (avoids "two Program<'a> types from different source units" errors).
[patch.crates-io]
oxc_allocator         = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_parser            = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_ast               = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_ast_macros        = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_ast_visit         = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_span              = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_diagnostics       = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_codegen           = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_syntax            = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_semantic          = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_regular_expression = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_ecmascript        = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_estree            = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_str               = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
oxc_data_structures   = { git = "https://github.com/oxc-project/oxc", rev = "187e1a52c1e16c43c50c435579e1e2c2173e690f" }
