[package]
name = "rsvelte_core"
version = "0.7.14"
edition = "2024"
rust-version = "1.90"
description = "A high-performance Rust implementation of the Svelte compiler"
license = "MIT"
repository = "https://github.com/baseballyama/rsvelte"
homepage = "https://github.com/baseballyama/rsvelte"
keywords = ["svelte", "compiler", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
# `mimalloc-alloc` is included so the NAPI cdylib + profiling bins default to
# mimalloc, which A/B-measured ~11% faster than jemalloc on the compile workload
# (mold itself links mimalloc for the same allocation-bound reason). jemalloc is
# kept available for comparison.
native = ["rayon", "miette/fancy", "jemalloc", "mimalloc-alloc"]
trace-fastpath = []
# `napi` opts the cdylib into the NAPI build. When the cdylib gets
# dlopen'd by Node (post-program-start), jemalloc's default
# initial-exec TLS model can exhaust the static TLS reserve on Linux тАФ
# producing "cannot allocate memory in static TLS block" at load time.
# Pull in the `disable_initial_exec_tls` feature transitively so the
# NAPI build is always dlopen-safe. The `?` makes it a no-op when
# jemalloc is disabled (e.g. `--no-default-features --features napi`).
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build", "tikv-jemallocator?/disable_initial_exec_tls"]
jemalloc = ["dep:tikv-jemallocator"]
# Profiling-only: use mimalloc instead of jemalloc in the profiling bins (A/B).
mimalloc-alloc = ["dep:mimalloc"]
pprof = ["dep:pprof"]
# `wasm` exports this crate's own `#[wasm_bindgen]` surface (the `wasm`
# module тАФ `parse_svelte`, `compile_client`, `svelte2tsx`, тАж) and is what
# `pkg/` is built with.
wasm = ["wasm-deps"]
# `wasm-deps` pulls only the wasm-bindgen toolchain + the wasm `getrandom`
# backend, *without* enabling the `wasm` bindings module. Downstream wasm
# crates (e.g. `rsvelte_fmt_wasm`) depend on `rsvelte_core` with this
# feature so they reuse the parser on a wasm target without re-exporting
# `rsvelte_core`'s `#[wasm_bindgen]` symbols (which collide at link time).
wasm-deps = ["wasm-bindgen", "console_error_panic_hook", "getrandom/wasm_js"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Parallelism (native only)
rayon = { version = "1.10", optional = true }

# Memory efficiency
bumpalo = { version = "3.16", features = ["collections"] }
compact_str = { version = "0.9", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }

# Fast hashing (5-10x faster than std HashMap/HashSet)
rustc-hash = "2.0"

# JavaScript parsing and code generation
oxc_allocator = "0.137"
oxc_parser = "0.137"
oxc_ast = { version = "0.137", features = ["serialize"] }
oxc_span = "0.137"
oxc_diagnostics = "0.137"
oxc_codegen = "0.137"
rsvelte_esrap = { path = "../rsvelte_esrap" }
oxc_syntax = "0.137"
oxc_semantic = "0.137"

# Module resolution for the svelte-check overlay: resolves `.svelte` imports
# (including tsconfig `paths`/`baseUrl` aliases like `$lib/...`) so aliased
# imports can be rewritten to point straight at their generated shadow `.tsx`.
oxc_resolver = "11"

# SPIKE: oxc_formatter is publish=false in oxc; pull via git from main HEAD
oxc_formatter = { git = "https://github.com/oxc-project/oxc", rev = "7537c582e090181244450aa4a9797c4264a84180" }

# Error handling
thiserror = "2.0"
miette = "7.4"

# Regex. Trim to the minimal feature set our patterns need тАФ `unicode-perl`
# (`\w \s \d \b`) + `unicode-case` (`(?i)`). We use no `\p{...}`/script/category
# classes or `\X` graphemes, so dropping `unicode-age`/`-bool`/`-gencat`/
# `-script`/`-segment` (the large Unicode tables) shrinks every artifact with no
# behavior change. (string_wizard already requests exactly this minimal set, so
# feature unification keeps the trim effective.)
regex = { version = "1.11", default-features = false, features = ["std", "perf", "unicode-perl", "unicode-case"] }

# Immutable data structures for efficient cloning
im = "15.1"

# SIMD-accelerated string search
memchr = "2.7"

# Fast integer formatting (already a transitive dep, now used directly in codegen)
itoa = "1"

# Source map handling
sourcemap = "9.0"

# MagicString (Rolldown's port)
string_wizard = "1.0.0"

# File system
walkdir = "2.5"

# Watch mode for the svelte-check CLI (Wave 2). `notify` is intentionally
# a regular dep, not feature-gated, because the only consumer is the
# Wave 2 binary and gating it would just add a feature combo to manage.
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }

# CLI argument parsing (svelte-check binary, Wave 2)
clap = { version = "4.5", features = ["derive"] }

# Time
chrono = "0.4"

# N-API support (optional)
napi = { version = "3", default-features = false, features = ["napi9", "serde-json", "async", "tokio_rt", "compat-mode"], optional = true }
napi-derive = { version = "3", optional = true }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.4", optional = true }
lazy_static = "1.5.0"
indexmap = { version = "2.13.0", features = ["serde"] }
oxc_ast_visit = "0.137"

# Better multi-threaded memory allocator (optional, Unix/Mac only)
[target.'cfg(all(not(windows), not(target_arch = "wasm32")))'.dependencies]
tikv-jemallocator = { version = "0.7", optional = true }
# mimalloc: production allocator (mold itself links mimalloc). `local_dynamic_tls`
# builds mimalloc with the local-dynamic TLS model instead of the default
# initial-exec one тАФ required so the NAPI cdylib can be `dlopen`'d by Node on
# Linux without "cannot allocate memory in static TLS block" (the same class of
# issue jemalloc's `disable_initial_exec_tls` solved).
mimalloc = { version = "0.1", optional = true, features = ["local_dynamic_tls"] }
pprof = { version = "0.15", default-features = false, optional = true }

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
# Testing
insta = { version = "1.42", features = ["json", "glob"] }
pretty_assertions = "1.4"
criterion = { version = "5.0.0", features = ["html_reports"], package = "codspeed-criterion-compat" }
test-generator = "0.3"
glob = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Unified diff output for test failure messages
similar = { version = "3.0", features = ["text"] }

[[bin]]
name = "test_reporter"
path = "src/bin/test_reporter.rs"

[[bin]]
name = "benchmark_runner"
path = "src/bin/benchmark_runner.rs"

[[bin]]
name = "profiler"
path = "src/bin/profiler.rs"

[[bin]]
name = "parse_profile"
path = "src/bin/parse_profile.rs"

[[bin]]
name = "samply_target"
path = "src/bin/samply_target.rs"

[[bin]]
name = "compile_profile"
path = "src/bin/compile_profile.rs"

[[bin]]
name = "min_parse_cost"
path = "src/bin/min_parse_cost.rs"

[[bin]]
name = "oxc_call_counter"
path = "src/bin/oxc_call_counter.rs"

[[bin]]
name = "parse_bottleneck"
path = "src/bin/parse_bottleneck.rs"

[[bin]]
name = "fastpath_coverage"
path = "src/bin/fastpath_coverage.rs"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "compiler"
harness = false

# wasm-opt (Binaryen) is the single largest WASM size win (тЙИ15тАУ40%). `-Oz`
# optimizes the produced `.wasm` for size; this only affects the wasm-pack
# release build shipped as @rsvelte/compiler, not native artifacts.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[lints]
workspace = true