[package]
name = "rsvelte_fmt"
version = "0.5.0"
edition = "2024"
rust-version = "1.90"
description = "Fast Svelte + JS/TS/CSS formatter — dispatches .svelte to rsvelte_formatter and other files to oxfmt"
license = "MIT"
publish = false

[[bin]]
name = "rsvelte-fmt"
path = "src/main.rs"

# Benchmark driver invoked by `scripts/bench/run-benchmark.mjs` for the `fmt`
# task. Lives here (not in `rsvelte_core`'s `benchmark_runner`) because the
# formatter sits in `rsvelte_formatter`, which depends on `rsvelte_core` —
# the reverse dependency would be a cycle.
[[bin]]
name = "fmt_benchmark_runner"
path = "src/bin/fmt_benchmark_runner.rs"

[dependencies]
rsvelte_formatter = { path = "../rsvelte_formatter" }
oxc_formatter = { git = "https://github.com/oxc-project/oxc", rev = "39677ba50d908ea09f6d9e58ded328461212f52a" }
oxc_formatter_core = { git = "https://github.com/oxc-project/oxc", rev = "39677ba50d908ea09f6d9e58ded328461212f52a" }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1.10"
anyhow = "1.0"
serde_json = "1.0"
ignore = "0.4.25"

[lints]
workspace = true
