[package]
name = "rsvelte_fmt"
version = "0.7.0"
edition = "2024"
rust-version = "1.90"
description = "Fast Svelte + JS/TS/CSS formatter — dispatches .svelte to rsvelte_formatter and other files to oxfmt"
license = "MIT"
publish = false

[[bin]]
name = "rsvelte-fmt"
path = "src/main.rs"

# Benchmark driver invoked by `scripts/bench/run-benchmark.mjs` for the `fmt`
# task. Lives here (not in `rsvelte_core`'s `benchmark_runner`) because the
# formatter sits in `rsvelte_formatter`, which depends on `rsvelte_core` —
# the reverse dependency would be a cycle.
[[bin]]
name = "fmt_benchmark_runner"
path = "src/bin/fmt_benchmark_runner.rs"

[dependencies]
rsvelte_formatter = { path = "../rsvelte_formatter" }
tailwind_class_order = { path = "../tailwind_class_order" }
oxc_formatter = { git = "https://github.com/oxc-project/oxc", rev = "2d4e8d20644e0e7446f0a381894b45ea339a0625" }
oxc_formatter_core = { git = "https://github.com/oxc-project/oxc", rev = "2d4e8d20644e0e7446f0a381894b45ea339a0625" }
# Static evaluation of `oxfmt.config.ts` / `.mts` (see src/ts_config.rs) — no
# embedded JS runtime here, so the config is parsed and interpreted directly
# instead of `import()`-ed like oxfmt's own NAPI build does.
oxc_allocator = { git = "https://github.com/oxc-project/oxc", rev = "2d4e8d20644e0e7446f0a381894b45ea339a0625" }
oxc_ast = { git = "https://github.com/oxc-project/oxc", rev = "2d4e8d20644e0e7446f0a381894b45ea339a0625" }
oxc_parser = { git = "https://github.com/oxc-project/oxc", rev = "2d4e8d20644e0e7446f0a381894b45ea339a0625" }
oxc_span = { git = "https://github.com/oxc-project/oxc", rev = "2d4e8d20644e0e7446f0a381894b45ea339a0625" }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1.10"
anyhow = "1.0"
serde_json = "1.0"
ignore = "0.4.25"

[lints]
workspace = true
