[package]
name = "rsvelte_formatter"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Fast Svelte 5 formatter built on rsvelte + oxc_formatter"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib"]

[features]
default = ["native"]
# Forward the backend choice down to `rsvelte_core`: `native` keeps rayon /
# miette / jemalloc; `wasm` swaps them for the wasm-bindgen toolchain so the
# formatter (and the parser it reuses) link cleanly on wasm32 — see
# `crates/rsvelte_fmt_wasm`.
native = ["rsvelte_core/native"]
wasm = ["rsvelte_core/wasm-deps"]

[dependencies]
rsvelte_core = { path = "../rsvelte_core", default-features = false }
oxc_allocator = "0.138"
oxc_ast = "0.138"
oxc_parser = "0.138"
oxc_span = "0.138"
oxc_formatter = { git = "https://github.com/oxc-project/oxc", rev = "7b045cd41764e365a88d5a128a42ab34e4564d34" }
oxc_formatter_core = { git = "https://github.com/oxc-project/oxc", rev = "39677ba50d908ea09f6d9e58ded328461212f52a" }
oxc_formatter_json = { git = "https://github.com/oxc-project/oxc", rev = "39677ba50d908ea09f6d9e58ded328461212f52a" }
oxc_formatter_css = { git = "https://github.com/oxc-project/oxc", rev = "39677ba50d908ea09f6d9e58ded328461212f52a" }
thiserror = "2.0"
unicode-width = "0.2"

[dev-dependencies]
criterion = { version = "5.0.0", features = [
  "html_reports",
], package = "codspeed-criterion-compat" }

[[bench]]
name = "formatter"
harness = false

[lints]
workspace = true
